# vindi-python

./: .gitignore  README.md  pyproject.toml
tests/: test_config.py  test_vindi_instantiation.py
tests/handlers/: test_client.py  test_customer.py  test_customer_handler.py
tests/handlers/customer/: test_update_customer.py
vindi/: __init__.py  address.py  charge_handler.py  client.py  config.py  customer.py  errors.py
vindi/handlers/: base_handler.py  bill_handler.py  charge_handler.py  customer.py  customer_handler.py  discount_handler.py  plan_handler.py  product_handler.py  subscription_handler.py
vindi/http_client/: fake_http_client.py  http_response.py  http_status.py  httpx_client.py  protocols.py
